apps/media/qbittorrent/qbittorrent-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qbittorrent.catacumbas69.com`)
      kind: Rule
      priority: 100
      services:
        - name: qbittorrent
          port: 8080
